perf: filter seat reservations at the database level in blockSeats
Fetch seats via a single batch query (Panache findByIds) instead of one
query per seat ID, and check for existing reservations with a targeted
event_id + seat_id query (backed by the existing unique constraint index)
instead of loading every reservation for the event.

Remove .jules/bolt.md, an unused scratch note from a prior automated commit.